<resources>
    <string name="app_name">أي خدمة</string>
    <string name="Client">Client</string>
    <string name="Service_Provider">Service Provider</string>
    <string name="Select_Membership">Select Membership</string>
    <string name="Mobile_number">Mobile Number</string>
    <string name="Password">Password</string>
    <string name="Forget_Password">Forget Password ?</string>
    <string name="Create_new_account">Create new account</string>
    <string name="Skip">Skip</string>
    <string name="Login">Login</string>
    <string name="Sign_up_new_Client">Signup new client</string>
    <string name="Name">Name</string>
    <string name="Agreementtext">Agree with all terms and Condition</string>
    <string name="Signup">Signup</string>
    <string name="type">type : &#032; </string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="phone_number_confirmion">Phone number confirmation</string>
    <string name="Confirmation_number">Confirmation number</string>
    <string name="Resend_confirmation_number">Resend confirmation number</string>
    <string name="Done">Done</string>
    <string name="Forget_Password_">Forget Password</string>
    <string name="Send">Send</string>
    <string name="title_activity_client_home" translatable="false">ClientHomeActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Home">Home</string>
    <string name="profile">Profile</string>
    <string name="Requeste">Requests</string>
    <string name="Notifications">Notifications</string>
    <string name="Favourits">favourites</string>
    <string name="Aboutus">About us</string>
    <string name="Setting">Settings</string>
    <string name="Language">Change Language</string>
    <string name="Contact_us">Contact us</string>
    <string name="convert_to_service_provider">Become service provider</string>
    <string name="logout">Logout</string>
    <string name="Search">Search</string>
    <string name="RequesteDescription">Request description</string>
    <string name="Select_Location">Select Location</string>
    <string name="SendRequest">Send Request</string>
    <string name="title_activity_map_acvity">Map</string>
    <string name="Search_for_Place">Search for Place</string>
    <string name="CurrentLocatio">Current Location</string>
    <string name="Save">Save</string>
    <string name="Offers">Offers</string>
    <string name="name">Name : &#032;  </string>
    <string name="Occupation">Job :&#032; </string>
    <string name="Birthdate">Birthdate : &#032;</string>
    <string name="Evaluation">Evaluation :&#032; </string>
    <string name="Location">Location :&#032; </string>
    <string name="Abouthim">About him :&#032; </string>
    <string name="Accept_Offer">Accept offer</string>
    <string name="Service_Provider_Details">Service provider details</string>
    <string name="Choose_Contact_method">Choose Contact method</string>
    <string name="Contact">Call</string>
    <string name="Call">Call</string>
    <string name="Chatting">Chat</string>
    <string name="Client_Reviews">Client Reviews</string>
    <string name="EditInformation">Edit Information</string>
    <string name="Edit">Edit</string>
    <string name="EditProfile">Profile</string>
    <string name="Requestes">Requestes</string>
    <string name="Previouse">previous</string>
    <string name="Recent">Recent</string>
    <string name="Service_type">Service Type :&#032; </string>
    <string name="Service_Date">Service Date :&#032; </string>
    <string name="Service_Provider_">Service Provider :&#032; </string>
    <string name="Evaluation_">Evaluation</string>
    <string name="Message">Message</string>
    <string name="writeEvaluation">Write evaluation :&#032; </string>
    <string name="Order_Accepted"> - Order Accepted</string>
    <string name="Main_Service">- Main service :&#032; </string>
    <string name="Main__Service"> Main service </string>
    <string name="Secondary_service">- Secondary service :&#032; </string>
    <string name="Secondary__service"> Secondary service  </string>
    <string name="Service_Provider__">- Service provider :&#032; </string>
    <string name="Undo">Undo</string>
    <string name="Be_Service_Provider">Be Service Provider</string>
    <string name="Item_Deleted">Item Deleted</string>
    <string name="Do_you_Want_to_change_Language">Do you Want to change Language</string>
    <string name="Arabic">العربية</string>
    <string name="English">English</string>
    <string name="re_Order">Reorder</string>
    <string name="Servive_provier_Registration">Service provider signup</string>
    <string name="Next">Next</string>
    <string name="birthdate_">Birthdate</string>
    <string name="Evaluation_rate">Evaluation rate</string>
    <string name="My_Points">My points</string>
    <string name="Requests_Accepted">Requestes Accepted</string>
    <string name="Requestes_Rejected">Requestes rejected</string>
    <string name="people_Add_you_to_fav">People add you to favourite</string>
    <string name="Bank_name">Bank name</string>
    <string name="SR">Suadi Riyal</string>
    <string name="Transaction_number">Transaction number</string>
    <string name="amount_of_transfer">amount of transfer</string>
    <string name="Sender_name">Sender name</string>
    <string name="Bank_Accounts">Bank Accounts</string>
    <string name="Account_Holders_Name">Account name :&#032; </string>
    <string name="Account_number">Account number :&#032; </string>
    <string name="Iban_number">Iban number :&#032; </string>
    <string name="Points">Points</string>
    <string name="point">Point</string>
    <string name="Price">Price</string>
    <string name="S_R">S.R</string>
    <string name="Buy">Buy</string>
    <string name="yourcurrentPoints">Your Current Points :&#032; </string>
    <string name="convert_to_client">Convert to client</string>
    <string name="Buy_Points">Buy Points</string>
    <string name="Client_request_details">Client request details</string>
    <string name="Client_name">Client name : &#032;</string>
    <string name="request_Status">Request Status</string>
    <string name="Requests_Rejected">Request Rejected</string>
    <string name="Please_fill_empty_fields">Please fill empty fields</string>
    <string name="Please_Agree_terms_Conditions"><![CDATA[Please Agree terms & conditions]]></string>
    <string name="Please_Add_marker_on_the_map">Please add marker on the map</string>
    <string name="Please_Add_Location_Description">Please add location description</string>
    <string name="Your_Request_Had_been_sent">Your request had been sent</string>
    <string name="Some_thing_went_wrong_Please_try_again">Some thing went wrong Please try again</string>
    <string name="Retry">Retry</string>
    <string name="Please_Add_Description">Please Add Description</string>
    <string name="You_Have_to_signup_to_make_request">You have to signup to make request</string>
    <string name="Informaion_Updated">Informaion updated</string>
    <string name="you_have_to_login_to_use_all_app">you have to login first</string>
    <string name="Couldnt_find">Could\'t find</string>
    <string name="try_another_word">try another word</string>
    <string name="Please_open_GPS">Please open gps</string>
    <string name="open">Open</string>
    <string name="Requests_progress">Request in progress</string>
    <string name="Loading">Loading..</string>
    <string name="offerhadbeensend">offer had been send</string>
    <string name="youcanuploadimagesofyourwork">you can upload images of your work</string>
    <string name="chooseImage">Choose Images</string>
    <string name="ImageUploaded">Image uploaded Successfully</string>
    <string name="message_had_been_send">Message had been send</string>
    <string name="noInternetConnecion">Please try again</string>
    <string name="somethingwentwrong">Something went wrong ,Please try again</string>
    <string name="changePass">Change password</string>
    <string name="password_changed">Password Changed</string>
    <string name="pleaseActivateyourAccount">Please Activate your account</string>
    <string name="pleaseaddRate">Please add rate</string>
    <string name="reviewAddedSuccessfuly">Review added successfuly</string>
    <string name="thereisnoReviews">There is no reviews</string>
    <string name="Aboutyou">About you</string>
    <string name="Requests_finished">Finished</string>
    <string name="locationPicked">Location picked</string>
    <string name="changePassword">Change password</string>
    <string name="Transaction_Date">Transaction Date</string>
    <string name="Show_Location_on_Map">Show location on map</string>
    <string name="Please_enter_valid_number">Please enter valid number</string>
    <string name="Are_you_sure_you_want_to_delete">Are you sure you want to delete</string>
    <string name="yes">Yes</string>
    <string name="Delete_Request">Delete request</string>
    <string name="Request_Deleted">Request deleted</string>
    <string name="new_Password">New password</string>
    <string name="OldPassword">Old password</string>
    <string name="password_must_be_more_than_4">Password must be more than 4 character</string>
    <string name="are_you_sure_you_want_to_delete_this_item">are you sure you want to delete this item ?</string>
    <string name="are_you_sure_you_want_to_delete_this_item_from_favourits">are you sure you want to delete this item from favourite ?</string>
    <string name="are_you_sure_you_want_to_delete_this_">are you sure you want to delete this Request ?</string>
    <string name="no">no</string>
    <string name="show_images">Show images</string>
    <string name="offers_count">Offers count : </string>
    <string name="waiting_for_service_provider">waiting for service provider</string>
    <string name="new_pass_Again">New password again</string>
    <string name="Delete_Offer">Delete Offer</string>
    <string name="Request_had_been_evaluated">Request_had_been_evaluated</string>
    <string name="login">Login</string>
    <string name="Requests_Acc2">Accepted</string>
    <string name="Requests_rej2">Rejected</string>
    <string name="two_pass_not_matching">re-password is not correct</string>
    <string name="away_from_you">away from you :</string>
    <string name="Sign_up_new_service_Provider">Sign up new service provider</string>
    <string name="terms_and_condition">Terms and conditions</string>
</resources>
