<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="10dp"
    android:orientation="vertical"
    app:cardBackgroundColor="#eeeeee"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/packageName"
            android:textColor="@color/nav_grey"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Points"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/points"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="10" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center"
                android:text="@string/point" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center"
                android:text="@string/Price"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="10" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/S_R" />
        </LinearLayout>

        <Button
            android:layout_width="90dp"
            android:id="@+id/buy"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/orang_button"
            android:text="@string/Buy"
            android:textAllCaps="false"
            android:textColor="@color/nav_grey" />
    </LinearLayout>
</android.support.v7.widget.CardView>