<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/backgr"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".RegistrtionTypeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-100dp"
            android:gravity="center">

            <ImageView
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:src="@drawable/choose" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical">
            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:clickable="false"
                android:background="@drawable/orang_button"
                android:text="@string/Select_Membership" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:textAllCaps="false"
                android:id="@+id/client"
                android:background="@drawable/grey_button"
                android:text="@string/Client"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/Provider"
                android:textAllCaps="false"
                android:layout_marginTop="15dp"
                android:background="@drawable/grey_button"
                android:text="@string/Service_Provider"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>