<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/orange_border"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/star_yellow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Evaluation_"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/Evaluation"
                    android:textAlignment="textStart"
                    android:textColor="@color/Black"
                    android:textSize="16sp" />

                <me.zhanghai.android.materialratingbar.MaterialRatingBar
                    android:id="@+id/Stars"
                    style="@style/Widget.MaterialRatingBar.RatingBar"
                    android:layout_width="120dp"
                    android:layout_height="30dp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/writeEvaluation"
                android:textAlignment="textStart"
                android:textColor="@color/Black"
                android:textSize="16sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/grey_button"
                android:gravity="start"
                android:id="@+id/comment"
                android:inputType="textMultiLine"
                android:padding="4dp"
                android:minLines="2"
                android:textAlignment="textStart" />

            <Button
                android:id="@+id/Signup"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/orang_button"
                android:gravity="center"
                android:text="@string/Send"
                android:textAllCaps="false"
                android:textColor="@color/Black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>