<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgr"
    android:fillViewport="true"
    tools:context=".RegistrtionTypeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:src="@drawable/welcome" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/orang_button"
                android:gravity="center"
                android:text="@string/Login"
                android:textAllCaps="false"
                android:textColor="@color/Black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/grey_button"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_phone" />

                <EditText
                    android:id="@+id/Login_Mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:maxLength="10"
                    android:gravity="start"
                    android:hint="@string/Mobile_number"
                    android:inputType="number"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textAlignment="viewStart"
                    android:textColorHint="@color/Black"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/grey_button"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/lock_black" />

                <EditText
                    android:id="@+id/Login_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="start"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textAlignment="viewStart"
                    android:textColorHint="@color/Black"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/forgetPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/Forget_Password"
                android:textColor="@color/Black"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1.4" />

            <TextView
                android:id="@+id/CreateNewAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".85"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/Create_new_account"
                android:textAlignment="viewEnd"
                android:textColor="@color/Black"
                android:textSize="12sp"
                tools:ignore="RtlCompat" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|bottom"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/Skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Skip"
                android:textColor="@color/Black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/Login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/orang_button"
                android:gravity="center"
                android:text="@string/Login"
                android:textAllCaps="false"
                android:textColor="@color/Black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>