<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BankAccountsActivity">

    <include
        layout="@layout/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/grey_button"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <TextView
                    android:id="@+id/Bank_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingLeft="10dp"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:paddingRight="10dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/grey_button"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/money" />

                <EditText
                    android:id="@+id/cash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="start"
                    android:hint="@string/amount_of_transfer"
                    android:inputType="text"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textAlignment="textStart"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/SR" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/grey_button"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/hashtag" />

                <EditText
                    android:id="@+id/tran_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="start"
                    android:hint="@string/Transaction_number"
                    android:inputType="number"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textAlignment="textStart"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/grey_button"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/date" />

                <EditText
                    android:id="@+id/Date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:focusable="false"
                    android:gravity="start"
                    android:hint="@string/Transaction_Date"
                    android:inputType="text"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textAlignment="textStart"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/grey_button"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_person" />

                <EditText
                    android:id="@+id/Sender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="start"
                    android:hint="@string/Sender_name"
                    android:inputType="text"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textAlignment="textStart"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="40dp">

                <Button
                    android:id="@+id/Signup"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="bottom"
                    android:background="@drawable/orang_button"
                    android:gravity="center"
                    android:text="@string/Send"
                    android:textAllCaps="false"
                    android:textColor="@color/Black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>